<resources>
    <string name="app_name">Cinder</string>
    <string name="userName">Username</string>
    <string name="password">Password</string>
    <string name="signIn">Sign In</string>
    <string name="course1">Course 1</string>
    <string name="course2">Course 2</string>
    <string name="course3">Course 3</string>
    <string name="course4">Course 4</string>
    <string name="course5">Course 5</string>
    <string name="course6">Course 6</string>
    <string name="university">University</string>
    <string name="studyLocation">Preferred Study Location</string>
    <string name="submit">Submit</string>
    <string name="name">Name</string>
    <string name="interest">Interest</string>
    <string name="fullName">First, Last</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="courses">Course1, Course2</string>
    <string name="location">Location</string>
    <string name="accountCreation">Create an Account</string>
    <string name="facebook_app_id">1149383881901875</string>
    <string name="fb_login_protocol_scheme">fb1149383881901875</string>
    <string name="back">Back</string>
    <string name="remove">Remove</string>
    <string name="send">Send</string>
    <string name="matches">Matches</string>
    <string name="createGroup">Create a Group</string>
    <string name="setting">Settings</string>
    <string name="contacts">Contacts</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="groups">Groups</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="notiOn">Notifications On</string>
    <string name="notiOff">Notifications Off</string>
    <string name="notifications">Notifications</string>
    <string name="signOut">Sign Out</string>
    <string name="changeProfile">Change Profile</string>
    <string name="groupName">Group Name</string>
    <string name="Comfirm">Confirm</string>
    <string name="instructionToAdd">Click on the User to Add to Group</string>
</resources>
